Enable new cops by default

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,9 @@ plugins:
   - rubocop-rspec
   - rubocop-vicenzo
 
+AllCops:
+  NewCops: enable
+
 Naming/FileName:
   Exclude:
     - lib/rubocop-vicenzo.rb
