--- a/config/default.yml
+++ b/config/default.yml
@@ -10,3 +10,8 @@ Vicenzo/RSpec/NestedSubjectRedefinition:
   Description: 'Check if a subject is redefined in a nested example group'
   Enabled: warning
   VersionAdded: '0.1.0'
+
+Vicenzo/Rails/EnumInclusionOfValidation:
+  Description: 'TODO: Write a description of the cop.'
+  Enabled: convention
+  VersionAdded: '0.1.0'
