Add mixed example and groups in same rspec indentation level

--- a/config/default.yml
+++ b/config/default.yml
@@ -1,6 +1,11 @@
+Vicenzo/RSpec/MixedExampleGroups:
+  Description: 'Check if there are example and groups at same level'
+  Enabled: warning
+  VersionAdded: '0.1.0'
+
 Vicenzo/RSpec/NestedContextImproperStart:
   Description: 'Check if the nested context does not start as a root one.'
-  Enabled: pending
+  Enabled: warning
   VersionAdded: '0.1.0'
 
 Vicenzo/RSpec/NestedLetRedefinition:
