Add Add RoboCop::Cop::Vicenzo::RSpec::LeakyDefinition cop (#9)
* Add Add RoboCop::Cop::Vicenzo::RSpec::LeakyDefinition cop

* Improve message commenting about before option

* Fix: Missing cange after renaming cop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,3 +25,8 @@ RSpec/ExampleLength:
 
 RSpec/NestedGroups:
   Enabled: false
+
+Vicenzo/RSpec/LeakyDefinition:
+  Exclude:
+    - 'spec/support/**/*'
+    - 'spec/rubocop/cop/vicenzo/rspec/leaky_definition_spec.rb'
