--- a/config/default.yml
+++ b/config/default.yml
@@ -4,6 +4,12 @@ Vicenzo/Rails/EnumInclusionOfValidation:
   Severity: convention
   VersionAdded: '0.1.0'
 
+Vicenzo/RSpec/InconsistentSiblingStructure:
+  Description: 'Enforces strict structural consistency (e.g. prevents mixing describe with context or examples with groups).'
+  Enabled: true
+  Severity: warning
+  VersionAdded: '0.1.0'
+
 Vicenzo/RSpec/MixedExampleGroups:
   Description: 'Check if there are example and groups at same level'
   Enabled: true
