Fix cops behavior (#10)
* Fix: NestedLetRedefinition sibling pointed as nested

* Add PR number to leaky definition cop

* Refactory: Return unecesary change

* Fix: NestedSubjectRedefinition sibling pointed as nested

* Add RuboCop::Cop::Vicenzo::RSpec::InconsistentSiblingStructure

* Remove RuboCop::Cop::Vicenzo::RSpec::MixedExampleGroups

* Rubocop Issues: Automatic fixes

* Fix: RuboCop::Cop::Vicenzo::RSpec::NestedContextImproperStart points all children instead just first one

* Fix: Considers controller {} block a valid mock

* Add changes to CHANGELOG.md

* Add Pull request number to changelog

* Rubocop Issues: Automatic fixes

* Rubocop Issues: Vicenzo/RSpec/NestedContextImproperStart

--- a/config/default.yml
+++ b/config/default.yml
@@ -4,11 +4,11 @@ Vicenzo/Rails/EnumInclusionOfValidation:
   Severity: convention
   VersionAdded: '0.1.0'
 
-Vicenzo/RSpec/MixedExampleGroups:
-  Description: 'Check if there are example and groups at same level'
+Vicenzo/RSpec/InconsistentSiblingStructure:
+  Description: 'Enforces strict structural consistency (e.g. prevents mixing describe with context or examples with groups).'
   Enabled: true
   Severity: warning
-  VersionAdded: '0.1.0'
+  VersionAdded: '0.2.0'
 
 Vicenzo/RSpec/NestedContextImproperStart:
   Description: 'Check if the nested context does not start as a root one.'
