feat(Vicenzo/Style/MultilineMethodCallParentheses): add cop for hybrid parenthesis style
Introduces a new cop to enforce parentheses on method calls with arguments
only when they span multiple lines.

Native RuboCop rules (`Style/MethodCallWithArgsParentheses`) are binary:
they either enforce parentheses everywhere (ruining DSLs like `render json:`)
or forbid them everywhere. This cop fills the gap by allowing a hybrid
style:
- Single-line: Optional (Parentheses not enforced).
- Multiline: Mandatory (Parentheses enforced for readability).

Implementation details:
- Auto-correct properly replaces the whitespace separator with `(`
  (e.g., `method arg` becomes `method(arg)`, not `method( arg`).
- Explicitly ignores operators (`+`, `[]`) and setter methods (`foo=`).

--- a/config/default.yml
+++ b/config/default.yml
@@ -45,3 +45,8 @@ Vicenzo/RSpec/LeakyDefinition:
   Exclude:
     - '**/spec/support/**/*'
     - '**/spec/factories/**/*'
+
+Vicenzo/Style/MultilineMethodCallParentheses:
+  Description: 'TODO: Write a description of the cop.'
+  Enabled: pending
+  VersionAdded: '<<next>>'
