--- a/config/default.yml
+++ b/config/default.yml
@@ -1,6 +1,6 @@
 Vicenzo/Layout/MultilineMethodCallLineBreaks:
   Description: 'Enforces that method calls in a multiline chain must each be on their own line.'
-  Enabled: pending
+  Enabled: true
   Severity: convention
   IndentationWidth: 2
   VersionAdded: '<<next>>'
@@ -45,3 +45,8 @@ Vicenzo/RSpec/LeakyDefinition:
   Exclude:
     - '**/spec/support/**/*'
     - '**/spec/factories/**/*'
+
+Vicenzo/Style/MultilineMethodCallParentheses:
+  Description: 'Enforces parentheses for method calls with arguments that span multiple lines.'
+  Enabled: true
+  VersionAdded: '<<next>>'
