feat(Vicenzo/Layout/WrapMultilineArguments): add cop to enforce strict wrapping
Introduces a new cop that forces method calls with multiline arguments to:
1. Use parentheses.
2. Break the line before the first argument.

This ensures consistent formatting for complex calls, preventing multiline
hashes or arrays from starting on the same line as the method call.

Example enforced:
  # Bad
  method arg1, {
    key: val
  }

  # Good
  method(
    arg1,
    {
      key: val
    }
  )

Includes specific handling for RSpec matchers inside `.to(...)` calls.

--- a/config/default.yml
+++ b/config/default.yml
@@ -5,6 +5,13 @@ Vicenzo/Layout/MultilineMethodCallLineBreaks:
   IndentationWidth: 2
   VersionAdded: '<<next>>'
 
+Vicenzo/Layout/WrapMultilineArguments:
+  Description: 'Enforces line breaks and parentheses when arguments are multiline.'
+  Enabled: true
+  Severity: convention
+  IndentationWidth: 2
+  VersionAdded: '<<next>>'
+
 Vicenzo/Rails/EnumInclusionOfValidation:
   Description: 'Check if the enum has the inclusion of validation defined.'
   Enabled: true
@@ -49,4 +56,5 @@ Vicenzo/RSpec/LeakyDefinition:
 Vicenzo/Style/MultilineMethodCallParentheses:
   Description: 'Enforces parentheses for method calls with arguments that span multiple lines.'
   Enabled: true
+  Severity: convention
   VersionAdded: '<<next>>'
