feat(Vicenzo/Style/MultilineMethodCallParentheses): add AllowedMethods configuration
Introduces the `AllowedMethods` option to exclude specific method names
from the mandatory parentheses rule on multiline calls.

This is essential for fluent DSLs (like RSpec's `expect(...).to`) where
enforcing parentheses causes indentation issues or degrades readability.

Includes:
- Logic to check `AllowedMethods` from config.
- Definition in `config/default.yml` to satisfy InternalAffairs.

--- a/config/default.yml
+++ b/config/default.yml
@@ -49,4 +49,5 @@ Vicenzo/RSpec/LeakyDefinition:
 Vicenzo/Style/MultilineMethodCallParentheses:
   Description: 'Enforces parentheses for method calls with arguments that span multiple lines.'
   Enabled: true
+  AllowedMethods: []
   VersionAdded: '<<next>>'
