Configure cops exclusion for bin and rakelib folders

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,11 +6,18 @@ plugins:
   - rubocop-internal_affairs
 
 AllCops:
+  Exclude:
+    - 'bin/**/*'
   NewCops: enable
 
 InternalAffairs/UndefinedConfig: # False positive because conflicts with Rubocop Layout namespace
   Exclude:
     - 'lib/rubocop/cop/vicenzo/layout/**/*'
+
+Metrics/BlockLength:
+  Exclude:
+    - 'rakelib/**/*'
+    - 'Rakefile'
 
 Naming/FileName:
   Exclude:
