Add rake to cut release (#16)
* Configure cops exclusion for bin and rakelib folders

* Configure ignoring binstub files

* Add instructions to generate binstubs

* Add Rake to cut a release

* Add latest versions on workflow

* Run bundle update

* Ignore vendor folder to cops

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,11 +6,19 @@ plugins:
   - rubocop-internal_affairs
 
 AllCops:
+  Exclude:
+    - 'bin/**/*'
+    - 'vendor/**/*'
   NewCops: enable
 
 InternalAffairs/UndefinedConfig: # False positive because conflicts with Rubocop Layout namespace
   Exclude:
     - 'lib/rubocop/cop/vicenzo/layout/**/*'
+
+Metrics/BlockLength:
+  Exclude:
+    - 'rakelib/**/*'
+    - 'Rakefile'
 
 Naming/FileName:
   Exclude:
