--- a/config/default.yml
+++ b/config/default.yml
@@ -3,7 +3,7 @@ Vicenzo/Layout/MultilineMethodCallLineBreaks:
   Enabled: true
   Severity: convention
   IndentationWidth: 2
-  VersionAdded: '<<next>>'
+  VersionAdded: '0.3.0'
 
 Vicenzo/Rails/EnumInclusionOfValidation:
   Description: 'Check if the enum has the inclusion of validation defined.'
@@ -50,4 +50,4 @@ Vicenzo/Style/MultilineMethodCallParentheses:
   Description: 'Enforces parentheses for method calls with arguments that span multiple lines.'
   Enabled: true
   AllowedMethods: []
-  VersionAdded: '<<next>>'
+  VersionAdded: '0.3.0'
